Closed
Bug 1680473
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::gfx::DrawTargetRecording::DrawTargetRecording]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
RESOLVED
FIXED
86 Branch
People
(Reporter: bobowen, Assigned: bobowen)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/582e27ee-8961-46a8-b750-c0cc40201109
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::DrawTargetRecording::DrawTargetRecording gfx/2d/DrawTargetRecording.cpp:185
1 xul.dll mozilla::layers::CanvasChild::CreateDrawTarget gfx/layers/ipc/CanvasChild.cpp:252
2 xul.dll mozilla::layers::RecordedTextureData::Lock gfx/layers/client/TextureRecorded.cpp:47
3 xul.dll mozilla::layers::TextureClient::Lock gfx/layers/client/TextureClient.cpp:700
4 xul.dll mozilla::layers::ShareableCanvasRenderer::UpdateCompositableClient gfx/layers/ShareableCanvasRenderer.cpp:213
5 xul.dll nsDisplayCanvas::CreateWebRenderCommands layout/generic/nsHTMLCanvasFrame.cpp:136
6 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1653
7 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1758
8 xul.dll nsDisplayOwnLayer::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:6416
9 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1653
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/631796ae73b3
Add null check for mRecorder in CanvasChild::CreateDrawTarget. r=jrmuizel
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
| Assignee | ||
Comment 4•5 years ago
|
||
Comment on attachment 9191021 [details]
Bug 1680473: Add null check for mRecorder in CanvasChild::CreateDrawTarget. r=jrmuizel!
Beta/Release Uplift Approval Request
- User impact if declined: Low level crash will still occur during the remote canvas IPC channel shutdown.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple null checks added.
- String changes made/needed: None
Attachment #9191021 -
Flags: approval-mozilla-beta?
Comment 5•5 years ago
|
||
Comment on attachment 9191021 [details]
Bug 1680473: Add null check for mRecorder in CanvasChild::CreateDrawTarget. r=jrmuizel!
Approved for 85.0b4.
Attachment #9191021 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
| bugherder uplift | ||
status-firefox85:
--- → fixed
Updated•5 years ago
|
status-firefox83:
--- → disabled
status-firefox84:
--- → disabled
status-firefox-esr78:
--- → disabled
You need to log in
before you can comment on or make changes to this bug.
Description
•