Bug 1680473: Add null check for mRecorder in CanvasChild::CreateDrawTarget. r=jrmuizel, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D98593